# strata

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  strata-architecture-and-requirements.pptx  ~$strata-architecture-and-requirements.pptx
.claude/agents/: glue-debugger.md  reliability-reviewer.md  schema-drift-resolver.md  table-author.md  test-author.md
.claude/commands/: add-table.md  backfill.md  debug.md  new-customer.md  release.md  review.md  schema-drift.md  setup-local.md
.claude/skills/add-source-table/: SKILL.md
.claude/skills/diagnose-failure/: SKILL.md
.claude/skills/new-customer-stamp/: SKILL.md
.claude/skills/prepare-release/: SKILL.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: add-table.prompt.md  backfill.prompt.md  debug.prompt.md  new-customer.prompt.md  release.prompt.md  review.prompt.md  schema-drift.prompt.md  setup-local.prompt.md
.github/workflows/: ci.yml
docs/: architecture.md  aws-runtime.md  configuration.md  local-runtime.md  operational-runbook.md  partitioning.md  raw-parquet-variant.md  reliability.md  testing-incremental.md  translating-ddl-to-yaml.md
examples/: README.md  sample_datamart.ddl.sql  seed_full_datamart.py  tables.from_ddl.yaml  tables.production.yaml  tables.yaml
local/: README.md  dashboard.py  docker-compose.yml
local/config/: tables.local.yaml
local/data/state/: strata.db
local/data/warehouse/silver_balances/fact_balance/metadata/: .00000-8d4481e8-6008-47cd-8657-e99ade00d600.metadata.json.crc  .e7b531e0-df30-4a1e-9c91-7547672efaaa-m0.avro.crc  (+6 more)
local/postgres/: bootstrap.py  init.sql  seed.py
local/queries/: explore.py  sample.sql
local/scripts/: add-incremental-data.sh  add_incremental_data.py  ddl_to_yaml.py  ingest.sh  inspect-state.sh  inspect_state.py  run-all.sh  run-and-verify.sh  run_and_verify.py  seed.sh  setup.sh  trino.sh
local/secrets/: db.local.json
local/spark/: Dockerfile
local/superset/: superset_config.py  superset_init.sh
local/trino/etc/: jvm.config  node.properties
local/trino/etc/catalog/: iceberg.properties
scripts/: backfill_all.sh  deploy.sh
src/strata/: __init__.py  __main__.py  config.py  exceptions.py  extract.py  ingest.py  local_ingest.py  metrics.py  recovery.py  retry.py  state.py  writer.py
src/strata/local_runtime/: __init__.py  io.py  metrics.py  spark.py  state.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/examples/single-customer/: terraform.tfvars.example
tests/unit/: test_config.py  test_retry.py  test_writer.py
ui/: README.md
ui/api/: Dockerfile  README.md  pom.xml  requirements.txt
ui/api/src/main/resources/: application.yaml
ui/api/strata_api/: __init__.py  db.py  main.py  settings.py
ui/api/strata_api/routers/: payments.py  tables.py
ui/web/: Dockerfile  angular.json  nginx.conf  package.json
ui/web/src/: index.html  styles.scss
ui/web/src/app/: app.component.ts  app.routes.ts
ui/web/src/app/core/: api.service.ts  models.ts
(+341 files in other folders)
