[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strata"
version = "0.1.0"
description = "Idempotent, watermark-driven replication from any RDBMS into Apache Iceberg on Amazon S3."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "strata contributors" },
]
keywords = ["aws", "glue", "iceberg", "data-engineering", "lakehouse", "etl"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "boto3>=1.34",
  "botocore>=1.34",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "moto>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage      = "https://github.com/your-org/strata"
Documentation = "https://github.com/your-org/strata/tree/main/docs"
Repository    = "https://github.com/your-org/strata.git"
Issues        = "https://github.com/your-org/strata/issues"
Changelog     = "https://github.com/your-org/strata/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strata = ["py.typed"]

# --------------------------------------------------------------------------- #
# Ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line too long (we set line-length above; long strings happen)
]

[tool.ruff.lint.isort]
known-first-party = ["strata"]

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--cov=strata",
  "--cov-report=term-missing",
]
markers = [
  "unit: unit tests (no AWS)",
  "integration: integration tests (require AWS or moto)",
]

# --------------------------------------------------------------------------- #
# Mypy
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # AWS Glue PySpark APIs are untyped
ignore_missing_imports = true
